--- a/jemdoc.css
+++ b/jemdoc.css
@@ -5,8 +5,8 @@ table#tlayout {
     border-collapse: separate;
     background: white;
 }
-/*
-body {
+
+/*body {
 	background: white;
 	padding-bottom: 8px;
 	margin: 0;
@@ -16,8 +16,10 @@ html {
   background-color: #eeeeee; 
 }
 
-body {
+body { 
   font-family: Georgia, Helvetica, Arial, Verdana, san-serif, Times;
+  /*font-size: 16px;
+  line-height: 24px;*/
   color: #000;
   background-color: #ffffff; 
   text-align:left; /* for IE */
@@ -34,20 +36,38 @@ body {
 
 #layout-menu {
 	background: #f6f6f6;
-	border: 1px solid #dddddd;
-	padding-top: 0.5em;
+	/*border: 1px solid #dddddd;*/
+	padding-top: 0.4em;
+	padding-bottom: 1.8em;
 	padding-left: 8px;
 	padding-right: 8px;
 	font-size: 1.0em;
 	width: auto;
 	white-space: nowrap;
-    text-align: left;
-    vertical-align: top;
+    /*text-align: left;*/
+    /*vertical-align: top;*/
+}
+
+#layout-menu a {
+    list-style-type: none;
+    float: left;
+    width: 13%;    
+    text-align: center;
+    line-height: 1.5em;
+	margin-left: 0.5em;
 }
 
 #layout-menu td {
 	background: #f4f4f4;
     vertical-align: top;
+}
+
+@media screen and (max-width: 600px) {
+  #layout-menu a:not(:first-child) {display: none;}
+  #layout-menu a.icon {
+    float: right;
+    display: block;
+  }
 }
 
 #layout-content {
@@ -60,9 +80,8 @@ body {
     vertical-align: top;
 }
 
-#layout-menu a {
-	line-height: 1.5em;
-	margin-left: 0.5em;
+.img-circle {
+    border-radius: 50%;
 }
 
 tt {
